# drf_learn

./: pyproject.toml
src/config/: settings.py  urls.py
src/lor/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
src/lor/migrations/: 0001_initial.py  0002_alter_pers_photo.py  0003_alter_pers_photo.py  0004_alter_pers_photo.py  0005_alter_pers_character_alter_pers_photo.py  0006_alter_pers_photo.py  0007_alter_pers_photo.py  0008_alter_pers_photo.py
