[tool.poetry]
name = "drf-learn"
version = "0.1.0"
description = ""
authors = ["orcakid <orcakid97@gmail.com>"]
readme = "README.md"
packages = [{include = "drf_learn"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
